cfn_benchmark/cfn_templates/kurron__cloud-formation-vpc/vpc.yml
---
# Cannot get this to work for some reason
#AWSTemplateFormatVersion: AWSTemplateFormatVersion: '2010-09-09'

Description: This template creates a new VPC, using best practices.

Metadata:
    Foo:
        Description: 'something clever'
    Bar:
        Description: 'something clever'

# These show up in the console and are expected to be provided by the operator
Parameters:
    Network:
        Description: 'The ip range to use when building out the VPC network'
        Type: 'String'
        Default: '10.0.0.0'

    Project:
        Description: 'Project name this VPC is has been created for'
        Type: 'String'
        Default: 'Weapon X'

    Creator:
        Description: 'Tool or person creating this VPC'
        Type: 'String'
        Default: 'CloudFormation'

    Environment:
        Description: 'Context the VPC will be used in.  Common values are production, testing and development.'
        Type: 'String'
        Default: 'development'

    Notes:
        Description: 'Notes to apply, normally edited in the console.'
        Type: 'String'
        Default: 'No notes'

    SshKeyName:
        Description: 'Name of the key to use when creating the EC2 instances'
        Type: 'AWS::EC2::KeyPair::KeyName'
        Default: 'asgard-lite-test'

Mappings:
    RegionToAmazonAMI:
        us-east-1:
            HVM64: ami-0b33d91d
        us-east-2:
            HVM64: ami-c55673a0
        us-west-1:
            HVM64: ami-165a0876
        us-west-2:
            HVM64: ami-6df1e514
    NetworkToSubnet:
        "10.0.0.0":
            PublicSubnetZoneA: "10.0.10.0/24"
            PrivateSubnetZoneA: "10.0.20.0/24"
            PublicSubnetZoneB: "10.0.30.0/24"
            PrivateSubnetZoneB: "10.0.40.0/24"
            PublicSubnetZoneC: "10.0.50.0/24"
            PrivateSubnetZoneC: "10.0.60.0/24"
        "172.16.0.0":
            PublicSubnetZoneA: "172.16.10.0/24"
            PrivateSubnetZoneA: "172.16.20.0/24"
            PublicSubnetZoneB: "172.16.30.0/24"
            PrivateSubnetZoneB: "172.16.40.0/24"
            PublicSubnetZoneC: "172.16.50.0/24"
            PrivateSubnetZoneC: "172.16.60.0/24"
        "192.168.0.0":
            PublicSubnetZoneA: "192.168.10.0/24"
            PrivateSubnetZoneA: "192.168.20.0/24"
            PublicSubnetZoneB: "192.168.30.0/24"
            PrivateSubnetZoneB: "192.168.40.0/24"
            PublicSubnetZoneC: "192.168.50.0/24"
            PrivateSubnetZoneC: "192.168.60.0/24"

Resources:
    # Create the VPC
    VPC:
        Type: 'AWS::EC2::VPC'
        Properties:
            CidrBlock:
                'Fn::Join': [ '/', [ !Ref 'Network', '16' ] ]
            EnableDnsSupport: true
            EnableDnsHostnames: true
            InstanceTenancy: 'default'
            Tags:
                - Key: 'Name'
                  Value:
                      Ref: 'AWS::StackName'
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value:
                      'Fn::Join': [ ' ', [ 'VPC for project', !Ref 'Project' ] ]
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # create an internet accessable subnet in the first availability zone
    PublicSubnetZoneA:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone:
                Fn::Select:
                - '0'
                - Fn::GetAZs:
                    Ref: 'AWS::Region'
            CidrBlock:
                Fn::FindInMap:
                - NetworkToSubnet
                - Ref: 'Network'
                - PublicSubnetZoneA
            MapPublicIpOnLaunch: 'True'
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Public', 'Zone A', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value:
                      'Fn::Join': [ ' ', [ 'Public for', !Ref 'Project' ] ]
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # create a non-internet accessable subnet in the first availability zone
    PrivateSubnetZoneA:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone:
                Fn::Select:
                - '0'
                - Fn::GetAZs:
                    Ref: 'AWS::Region'
            CidrBlock:
                Fn::FindInMap:
                - NetworkToSubnet
                - Ref: 'Network'
                - PrivateSubnetZoneA
            MapPublicIpOnLaunch: 'False'
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Private', 'Zone A', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value:
                      'Fn::Join': [ ' ', [ 'Private for', !Ref 'Project' ] ]
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # create an internet accessable subnet in the second availability zone
    PublicSubnetZoneB:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone:
                Fn::Select:
                - '1'
                - Fn::GetAZs:
                    Ref: 'AWS::Region'
            CidrBlock:
                Fn::FindInMap:
                - NetworkToSubnet
                - Ref: 'Network'
                - PublicSubnetZoneB
            MapPublicIpOnLaunch: 'True'
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Public', 'Zone B', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value:
                      'Fn::Join': [ ' ', [ 'Public for', !Ref 'Project' ] ]
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # create a non-internet accessable subnet in the second availability zone
    PrivateSubnetZoneB:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone:
                Fn::Select:
                - '1'
                - Fn::GetAZs:
                    Ref: 'AWS::Region'
            CidrBlock:
                Fn::FindInMap:
                - NetworkToSubnet
                - Ref: 'Network'
                - PrivateSubnetZoneB
            MapPublicIpOnLaunch: 'False'
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Private', 'Zone B', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value:
                      'Fn::Join': [ ' ', [ 'Private for', !Ref 'Project' ] ]
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # create an internet accessable subnet in the third availability zone
    PublicSubnetZoneC:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone:
                Fn::Select:
                - '2'
                - Fn::GetAZs:
                    Ref: 'AWS::Region'
            CidrBlock:
                Fn::FindInMap:
                - NetworkToSubnet
                - Ref: 'Network'
                - PublicSubnetZoneC
            MapPublicIpOnLaunch: 'True'
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Public', 'Zone C', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value:
                      'Fn::Join': [ ' ', [ 'Public for', !Ref 'Project' ] ]
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # create a non-internet accessable subnet in the third availability zone
    PrivateSubnetZoneC:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone:
                Fn::Select:
                - '2'
                - Fn::GetAZs:
                    Ref: 'AWS::Region'
            CidrBlock:
                Fn::FindInMap:
                - NetworkToSubnet
                - Ref: 'Network'
                - PrivateSubnetZoneC
            MapPublicIpOnLaunch: 'False'
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Private', 'Zone C', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value:
                      'Fn::Join': [ ' ', [ 'Private for', !Ref 'Project' ] ]
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # create a gateway to the internet
    InternetGateway:
        Type: 'AWS::EC2::InternetGateway'
        Properties:
            Tags:
                - Key: 'Name'
                  Value:
                      Ref: 'AWS::StackName'
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value: 'Controls network traffic entering and leaving the VPC'
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # associate the gateway to the VPC
    GatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId:
                Ref: 'InternetGateway'
            VpcId:
                Ref: 'VPC'

    # create the routing table for the public subnet in availability zone A
    RouteTablePublicZoneA:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Public', 'Zone A', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value: 'Public subnet routing'
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # create the routing table for the public subnet in availability zone B
    RouteTablePublicZoneB:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Public', 'Zone B', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value: 'Public subnet routing'
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # create the routing table for the public subnet in availability zone C
    RouteTablePublicZoneC:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Public', 'Zone C', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value: 'Public subnet routing'
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # route traffic through the internet gateway
    RoutePublicZoneA:
        DependsOn:
            - InternetGateway
        Type: AWS::EC2::Route
        Properties:
            DestinationCidrBlock: '0.0.0.0/0'
            GatewayId:
                Ref: 'InternetGateway'
            RouteTableId:
                Ref: 'RouteTablePublicZoneA'

    # route traffic through the internet gateway
    RoutePublicZoneB:
        DependsOn:
            - InternetGateway
        Type: AWS::EC2::Route
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId:
                Ref: 'InternetGateway'
            RouteTableId:
                Ref: 'RouteTablePublicZoneB'

    # route traffic through the internet gateway
    RoutePublicZoneC:
        DependsOn:
            - InternetGateway
        Type: AWS::EC2::Route
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId:
                Ref: 'InternetGateway'
            RouteTableId:
                Ref: 'RouteTablePublicZoneC'

    # associate public subnet to its routing table
    RouteAssociationPublicSubnetZoneA:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId:
                Ref: 'PublicSubnetZoneA'
            RouteTableId:
                Ref: 'RouteTablePublicZoneA'

    # associate public subnet to its routing table
    RouteAssociationPublicSubnetZoneB:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId:
                Ref: 'PublicSubnetZoneB'
            RouteTableId:
                Ref: 'RouteTablePublicZoneB'

    # associate public subnet to its routing table
    RouteAssociationPublicSubnetZoneB:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId:
                Ref: 'PublicSubnetZoneC'
            RouteTableId:
                Ref: 'RouteTablePublicZoneC'

    # we need an EIP for the zone A NAT gateway
    ElasticIpZoneA:
        DependsOn:
            - GatewayAttachment
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc

    # we need an EIP for the zone B NAT gateway
    ElasticIpZoneB:
        DependsOn:
            - GatewayAttachment
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc

    # we need an EIP for the zone C NAT gateway
    ElasticIpZoneC:
        DependsOn:
            - GatewayAttachment
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc

    # place the zone A NAT gateway into the public subnet (it needs internet access)
    NatGatewayZoneA:
        Type: AWS::EC2::NatGateway
        DependsOn:
            - InternetGateway
        Properties:
            AllocationId:
                Fn::GetAtt:
                    - ElasticIpZoneA
                    - AllocationId
            SubnetId:
                Ref: 'PublicSubnetZoneA'

    # place the zone B NAT gateway into the public subnet (it needs internet access)
    NatGatewayZoneB:
        Type: AWS::EC2::NatGateway
        DependsOn:
            - InternetGateway
        Properties:
            AllocationId:
                Fn::GetAtt:
                    - ElasticIpZoneB
                    - AllocationId
            SubnetId:
                Ref: 'PublicSubnetZoneB'

    # place the zone C NAT gateway into the public subnet (it needs internet access)
    NatGatewayZoneC:
        Type: AWS::EC2::NatGateway
        DependsOn:
            - InternetGateway
        Properties:
            AllocationId:
                Fn::GetAtt:
                    - ElasticIpZoneC
                    - AllocationId
            SubnetId:
                Ref: 'PublicSubnetZoneC'

    # create a routing table for the private subnet in availability zone A
    RouteTablePrivateZoneA:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Private', 'Zone A', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value: 'Private subnet routing'
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # create a routing table for the private subnet in availability zone B
    RouteTablePrivateZoneB:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Private', 'Zone B', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value: 'Private subnet routing'
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # create a routing table for the private subnet in availability zone C
    RouteTablePrivateZoneC:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: 'VPC'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Private', 'Zone C', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value: 'Private subnet routing'
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # associate the private subnet with its routing table
    RouteAssociationPrivateSubnetZoneA:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId:
                Ref: 'PrivateSubnetZoneA'
            RouteTableId:
                Ref: 'RouteTablePrivateZoneA'

    # associate the private subnet with its routing table
    RouteAssociationPrivateSubnetZoneB:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId:
                Ref: 'PrivateSubnetZoneB'
            RouteTableId:
                Ref: 'RouteTablePrivateZoneB'

    # associate the private subnet with its routing table
    RouteAssociationPrivateSubnetZoneC:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId:
                Ref: 'PrivateSubnetZoneC'
            RouteTableId:
                Ref: 'RouteTablePrivateZoneC'

    # route outbound traffic to the zone A NAT gateway
    NatRouteZoneA:
        Type: AWS::EC2::Route
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId:
                Ref: 'NatGatewayZoneA'
            RouteTableId:
                Ref: 'RouteTablePrivateZoneA'

    # route outbound traffic to the zone B NAT gateway
    NatRouteZoneB:
        Type: AWS::EC2::Route
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId:
                Ref: 'NatGatewayZoneB'
            RouteTableId:
                Ref: 'RouteTablePrivateZoneB'

    # route outbound traffic to the zone C NAT gateway
    NatRouteZoneC:
        Type: AWS::EC2::Route
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId:
                Ref: 'NatGatewayZoneC'
            RouteTableId:
                Ref: 'RouteTablePrivateZoneC'

    # locked down the bastion servers so only inbound SSH is allowed
    BastionSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: 'SSH traffic only'
            VpcId:
                Ref: 'VPC'
            SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
                  CidrIp: 0.0.0.0/0
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Bastion', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value: 'SSH access to bastion hosts'
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'No notes'

    # limit inbound access from the bastion boxes only -- primarily for testing of the network settings
    FromBastionSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: 'Access from the bastion boxes only'
            VpcId:
                Ref: 'VPC'
            SecurityGroupIngress:
                - IpProtocol: '-1'
                  FromPort: 0
                  ToPort: 65535
                  SourceSecurityGroupId:
                      Ref: 'BastionSecurityGroup'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'From Bastion Only', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value: 'Access only from Bastion hosts'
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'Only traffic from instances using the bastion security group have access'

    # unlimited inbound access -- primarily for testing of the network settings
    WideOpenSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: 'Access from anywhere'
            VpcId:
                Ref: 'VPC'
            SecurityGroupIngress:
                - IpProtocol: '-1'
                  FromPort: 0
                  ToPort: 65535
                  CidrIp: 0.0.0.0/0
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Wide Open', !Ref 'AWS::StackName' ] ]
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                - Key: 'Purpose'
                  Value: 'Access only from all hosts'
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                - Key: 'Freetext'
                  Value: 'Unsafe! Only useful for network testing.'

    # Role needed by the EC2 instances so they can tag their EBS volumes
    AmazonEC2FullAccessRole:
        Type: 'AWS::IAM::Role'
        Properties:
            AssumeRolePolicyDocument:
                Statement:
                -
                    Sid: ""
                    Effect: "Allow"
                    Principal:
                        Service:
                        - "ec2.amazonaws.com"
                    Action:
                    - "sts:AssumeRole"
            Path: '/'
            Policies:
            -
                PolicyName: "AmazonEC2FullAccess"
                PolicyDocument:
                    Statement:
                    -
                        Effect: "Allow"
                        Action:
                            - "ec2:*"
                        Resource: "*"
            # documentation suggests that providing a name will cause issues if updates are needed
            RoleName: !Join [ '-', [ !Ref 'AWS::StackName', 'AmazonEC2FullAccessRole' ] ]

    # EC2 instances will run using this profile
    EC2FullAccessInstanceProfile:
        Type: "AWS::IAM::InstanceProfile"
        Properties:
            Path: "/"
            Roles:
            -
                Ref: "AmazonEC2FullAccessRole"

    # auto scaling launch configuration for the Bastion servers
    BastionLaunchConfiguration:
        Type: AWS::AutoScaling::LaunchConfiguration
        Properties:
            EbsOptimized: false
            IamInstanceProfile:
                Ref: 'EC2FullAccessInstanceProfile'
            ImageId:
                Fn::FindInMap:
                    - RegionToAmazonAMI
                    - Ref: 'AWS::Region'
                    - HVM64
            InstanceMonitoring: false
            InstanceType: t2.nano
            KeyName:
                Ref: 'SshKeyName'
            SecurityGroups:
                - !Ref 'BastionSecurityGroup'
            UserData:
                Fn::Base64: !Sub |
                    #!/bin/bash -xe
                    AWS_INSTANCE_ID=$( curl http://169.254.169.254/latest/meta-data/instance-id )
                    echo "AWS_INSTANCE_ID=$AWS_INSTANCE_ID"
                    ROOT_DISK_ID=$( aws ec2 describe-volumes --region ${AWS::Region} --filter "Name=attachment.instance-id, Values=$AWS_INSTANCE_ID" --query "Volumes[].VolumeId" --out text )
                    echo "ROOT_DISK_ID=$ROOT_DISK_ID"
                    aws ec2 create-tags  --region ${AWS::Region} --resources $ROOT_DISK_ID --tags Key=Project,Value='${Project}'

    # auto scaling group for the Bastion servers
    BastionAutoScalingGroup:
        DependsOn: 'InternetGateway'
        Type: AWS::AutoScaling::AutoScalingGroup
        Properties:
            Cooldown: '120'
            DesiredCapacity: '1'
            HealthCheckType: 'EC2'
            LaunchConfigurationName:
                Ref: 'BastionLaunchConfiguration'
            MaxSize: '2'
            MinSize: '1'
            Tags:
                - Key: 'Name'
                  Value:
                      'Fn::Join': [ ':', [ 'Bastion', !Ref 'AWS::StackName' ] ]
                  PropagateAtLaunch: true
                - Key: 'Project'
                  Value:
                      Ref: 'Project'
                  PropagateAtLaunch: true
                - Key: 'Purpose'
                  Value: 'Jump server'
                  PropagateAtLaunch: true
                - Key: 'Creator'
                  Value:
                      Ref: 'Creator'
                  PropagateAtLaunch: true
                - Key: 'Environment'
                  Value:
                      Ref: 'Environment'
                  PropagateAtLaunch: true
                - Key: 'Freetext'
                  Value: 'Use SSH forwarding to simplify access to internal servers'
                  PropagateAtLaunch: true
            VPCZoneIdentifier: [ !Ref 'PublicSubnetZoneA', !Ref 'PublicSubnetZoneB', !Ref 'PublicSubnetZoneC' ]

    # Turn off the instances after work hours
    ScheduledActionDown:
        Type: AWS::AutoScaling::ScheduledAction
        Properties:
            AutoScalingGroupName:
                Ref: BastionAutoScalingGroup
            DesiredCapacity: 0
            MaxSize: 0
            MinSize: 0
            # 7:00 PM EST converted to UTC
            Recurrence: '00 00 * * *'

    # Turn on the instances during work hours
    ScheduledActionUp:
        Type: AWS::AutoScaling::ScheduledAction
        Properties:
            AutoScalingGroupName:
                Ref: BastionAutoScalingGroup
            DesiredCapacity: 1
            MaxSize: 2
            MinSize: 1
            # 7:00 AM EST converted to UTC
            Recurrence: '00 12 * * *'

Outputs:
    VPC:
        Description: 'Virtual Private Cloud'
        Value:
            Ref: 'VPC'
    PublicSubnets:
        Description: A list of the public subnets
        Value: !Join [ ",", [ !Ref PublicSubnetZoneA, !Ref PublicSubnetZoneB, !Ref PublicSubnetZoneC ]]
    PrivateSubnets:
        Description: A list of the private subnets
        Value: !Join [ ",", [ !Ref PrivateSubnetZoneA, !Ref PrivateSubnetZoneB, !Ref PrivateSubnetZoneC ]]
    Subnets:
        Description: A list of the public subnets
        Value: !Join [ ",", [ !Ref PublicSubnetZoneA, !Ref PublicSubnetZoneB, !Ref PublicSubnetZoneC, !Ref PrivateSubnetZoneA, !Ref PrivateSubnetZoneB, !Ref PrivateSubnetZoneC ]]
    PublicSubnetZoneA:
        Description: 'Zone A Public Subnet ID'
        Value:
            Ref: 'PublicSubnetZoneA'
    PrivateSubnetZoneA:
        Description: 'Zone A Private Subnet ID'
        Value:
            Ref: 'PrivateSubnetZoneA'
    PublicSubnetZoneB:
        Description: 'Zone B Public Subnet ID'
        Value:
            Ref: 'PublicSubnetZoneB'
    PrivateSubnetZoneB:
        Description: 'Zone B Private Subnet ID'
        Value:
            Ref: 'PrivateSubnetZoneB'
    PublicSubnetZoneC:
        Description: 'Zone C Public Subnet ID'
        Value:
            Ref: 'PublicSubnetZoneC'
    PrivateSubnetZoneC:
        Description: 'Zone C Private Subnet ID'
        Value:
            Ref: 'PrivateSubnetZoneC'
    SecurityGroupWideOpen:
        Description: 'Group ID of the WideOpen security group'
        Value: !GetAtt WideOpenSecurityGroup.GroupId
